# bevy_glacial

./: .envrc  Cargo.toml  Makefile  PROJECT  flake.nix
examples/: gizmo.rs
src/: axis_gizmo.rs  camera.rs  follow.rs  grid.rs  joint_gizmos.rs  lib.rs  prelude.rs  selection_ring.rs  window_settings.rs
src/gizmo/: mod.rs  mouse_interact.rs  picking.rs  render.rs
src/gizmo/core/: config.rs  gizmo.rs  mod.rs  shape.rs
src/gizmo/core/subgizmo/: arcball.rs  common.rs  mod.rs  rotation.rs  scale.rs  translation.rs
